--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,7 @@ code {
     --midishBlue: #d3e5ed;
     --midBlue: #acccda;
     --darkBlue: #82b3c9;
+    --backgroundGrey: #eaeaea;
 }
 
 .flex-col {
